# ARC_solver

./: .gitignore  README.md  pyproject.toml
arc_solve/: arc_relational_converter.py  display.py  load_data.ipynb  load_data.py  main.py
