[tool.poetry]
name = "arc"
version = "0.1.0"
description = ""
authors = ["khoi <khoi.nguyen@codegaia.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
np = "^1.0.2"
numpy = "^2.1.1"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
